@@ -22,7 +22,10 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 # $Log$
-# Revision 1.13  2006-06-11 19:47:25  tino
+# Revision 1.14  2006-07-29 23:36:21  tino
+# Allow VERSIONFILE to be different from $(PROG1)
+#
+# Revision 1.13  2006/06/11 19:47:25  tino
 # See ChangeLog
 #
 # Revision 1.12  2005/12/05 02:11:12  tino
@@ -64,6 +67,8 @@
 
       PROGS=!NAME!
        OBJS=
+#VERSIONFILE=
+#VERSIONNAME=
 # Additional (fixed) installs for
 # bin sbin lib etc man share/man inf share/inf respectively
  INSTALLBIN=
