@@ -1,3 +1,10 @@
+2006-07-30    <tino@firebird.03.softkill.net>
+
+	* Makefile.tino.dist: VERSIONFILE and VERSIONNAME added
+
+	* Makefile.proto (VERSIONFILE, VERSIONNAME): Rule for versioning
+	changed, such that I can create names not based on $(PROG1)
+
 2006-07-26    <tino@firebird.03.softkill.net>
 
 	* file.h (tino_file_notsocket, tino_file_notfile): added
